kubernetes-manifests/monitoring/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: k8s
    thanos-component: thanos-sidecar
  name: prometheus-k8s
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  - name: grpc
    port: 10901
    targetPort: 10901
  - name: thanos
    port: 10902
    targetPort: 10902
  selector:
    app: prometheus
    prometheus: k8s
  sessionAffinity: ClientIP
