kubernetes-manifests/monitoring/prometheus/prometheus-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`k8s-prometheus.rascal.local`)
    kind: Rule
    services:
    - name: prometheus-k8s
      port: 9090
      scheme: http
